# ncnn_paddleocr

./: build.gradle  gradle.properties  local.properties
app/: build.gradle  local.properties
app/src/jni/: CMakeLists.txt  common.cpp
app/src/jni/opencv-mobile-3.4.20-android/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules.cmake
app/src/jni/opencv-mobile-3.4.20-android/sdk/native/jni/abi-armeabi-v7a/: OpenCVModules.cmake
app/src/jni/opencv-mobile-3.4.20-android/sdk/native/jni/abi-x86/: OpenCVModules.cmake
app/src/jni/opencv-mobile-3.4.20-android/sdk/native/jni/abi-x86_64/: OpenCVModules.cmake
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/paddleocrncnn/: MainActivity.java
app/src/main/jni/: CMakeLists.txt
app/src/main/res/layout/: main.xml
gradle/wrapper/: gradle-wrapper.properties
